--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -63,3 +63,12 @@ html, body {
 .f1 {
     font-size: 2em;
 }
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 1.5em !important;
+    }
+    h2 {
+        font-size: 1em !important;
+    }
+  }
